--- a/MontyHallProblem/MontyHallProblem.csproj
+++ b/MontyHallProblem/MontyHallProblem.csproj
@@ -43,10 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CoinFlip.cs" />
+    <Compile Include="MontyHall.cs" />
     <Compile Include="Porta.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="ProgressBar.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Roulette.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
